# frontline

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml
docs/: ARCHITECTURE.md
pipeline/: __init__.py  _llm.py  critique.py  generate.py  glossary.py  glossary.yaml  ingest.py  log.py  models.py  publish.py  regenerate.py  run.py
pipeline/data/: published.jsonl
prompts/: critique.md  generate.md
site/: astro.config.mjs  package-lock.json  package.json
site/functions/api/: vote.ts  votes.ts
site/src/: content.config.ts  utils.ts
site/src/components/: CmdPreamble.astro  FileViewer.astro  VoteButton.astro
site/src/content/posts/: 2026-05-10-2025-692-dahlias-агрегатні-підписи-на-дискретних-логарифмах-без-парув.md  2026-05-10-2026-377-ідеально-захищений-mpc-без-привязки-до-типу-мережі-тепер-з-п.md  2026-05-10-2605.01640-закони-масштабування-для-тренування-з-обмеженими-даними-скіл.md  2026-05-10-2605.04045-аудіо-візуальний-інтелект-у-великих-фундаментальних-моделях.md  2026-05-10-2605.04330-як-глибина-трансформера-визначає-межі-неявного-дедуктивного.md  2026-05-10-2605.05242-агентний-пошук-без-векторних-індексів-коли-grep-перемагає-се.md  2026-05-10-2605.06477-geostack-як-складати-знання-з-кількох-доменів-у-vlm-без-ката.md  2026-05-10-2605.06642-strata-як-стратегічне-планування-траєкторій-прискорює-навчан.md  2026-05-10-2605.06663-emo-як-навчити-mixture-of-experts-бути-по-справжньому-модуль.md
site/src/content/queue/: 2026-05-10-2605.06627-pianocore-uniflred-midi-dataset.md  (+5 more)
site/src/layouts/: Layout.astro
site/src/lib/: glossary-tooltips.ts  voting-init.ts  voting.ts
site/src/pages/: about.astro  algorithm.astro  glossary.json.ts  index.astro
tests/: conftest.py  test_glossary.py  test_ingest.py  test_llm_stages.py  test_log.py  test_models.py  test_publish.py  test_run.py
(+3 files in other folders)
