[project]
name = "frontline"
version = "0.1.0"
description = "AI/ML research aggregator in Ukrainian"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "feedparser>=6.0.11",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest-httpx>=0.32.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# RUF001-003: ambiguous Cyrillic/Latin lookalikes — false positives in UA-language project
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
frontline = "pipeline.run:main"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
